# news

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  bors.toml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs  news.rs
frontend/: Cargo.toml  README.md  package.json  tailwind.config.js  webpack.config.js
frontend/netlify/: index.html
frontend/src/: app.rs
frontend/static/: index.html  styles.css
news-frontend/: Cargo.toml
