[package]
name = "news-backend"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
env_logger = "0.7.1"
actix-web-actors = "2.0.0"
actix = "0.9.0"
actix-broker = "0.3.0"
log = "0.4.8"
