[package]
name = "news-backend"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.0"
env_logger = "0.7.1"
actix-web-actors = "2.0.0"
actix = "0.9.0"
actix-broker = "0.3.0"
log = "0.4.8"
fern = { version = "0.6.0", features = ["colored"] }
chrono = { version = "0.4.11", features = ["serde"] }
rss = { version = "1.9.0", features = ["from_url", "serde"] }
blake3 = "0.3.2"
blake2 = "0.8.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
directories = "2.0.2"
anyhow = "1.0.28"
bincode = "1.2.1"
reqwest = { version = "0.10.4", features = ["blocking"] }
image = "0.23.12"
rayon = "1.3.0"
json = "0.12.4"
futures = "0.3.4"
