[package]
name = "news-frontend"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
web_logger = "0.2"
yew = { version = "0.13", features = ["web_sys"] }
wee_alloc = { version = "0.4.4", optional = true }
rss = { version = "1.9.0", features = ["serde"] }
chrono = { version = "0.4.11", features = ["serde"] }
anyhow = "1.0.28"

[dependencies.web-sys]
version = "0.3.37"
features = [
  'KeyboardEvent',
  'MediaQueryList',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
